<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dataNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/data_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/flashcardplusdefault_color" />

        <View style="@style/blue_line_style" />

        <EditText
            android:id="@+id/dataNameEditText"
            style="@style/new_entry_edit_text_style"
            android:inputType="text"
            android:ems="10" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/dataEntryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/data_entry"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/flashcardplusdefault_color" />

        <View style="@style/blue_line_style" />

        <EditText
            android:id="@+id/dataEntryEditText"
            style="@style/new_entry_edit_text_style"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/newEntryButton"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:text="@string/enter" />

    </LinearLayout>

</ScrollView>
